--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
             <div class="form">
-                <textarea type="text" name="text" id="textm" class="textmessage" onkeyup="check()"></textarea>
+                <textarea type="text" name="message" id="textm" class="textmessage" onkeyup="check()"></textarea>
                 <div class="dots">
                     <div class="dot dot1"></div>
                     <div class="dot dot2"></div>
@@ -34,6 +34,8 @@
             </div>
         </div>
     </div>
+     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
